star-wars/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.232.b09-0.el7_7.x86_64/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/ubs/app/soft/bluej/lib/bluejcore.jar:/ubs/app/soft/bluej/lib/junit-4.8.2.jar:/ubs/app/soft/bluej/lib/userlib/pi4j-service.jar:/ubs/app/soft/bluej/lib/userlib/pi4j-device.jar:/ubs/app/soft/bluej/lib/userlib/pi4j-core.jar:/ubs/app/soft/bluej/lib/userlib/pi4j-gpio-extension.jar:/ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars
-d
/ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/ubs/app/soft/bluej/lib/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars/NameGenerator.java
<---- end of javadoc command ---->
Loading source file /ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars/NameGenerator.java...
/ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars/NameGenerator.java:73: error: ';' expected
        p.getFirstName().substring(1,3)) += returnedFirstName; //puis les 2 suivants et on les concatène à la chaine à renvoyer
                                       ^
/ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars/NameGenerator.java:73: error: not a statement
        p.getFirstName().substring(1,3)) += returnedFirstName; //puis les 2 suivants et on les concatène à la chaine à renvoyer
                                            ^
/ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars/NameGenerator.java:82: error: ';' expected
        p.getBirthRegion().substring(1,1)) += returnedLastName; //puis la deuxième
                                         ^
/ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars/NameGenerator.java:82: error: not a statement
        p.getBirthRegion().substring(1,1)) += returnedLastName; //puis la deuxième
                                              ^
/ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars/NameGenerator.java:92: error: ';' expected
            j = p.getBirthCity().substring(j,j)) += returnedLastName; //caractère numéro j
                                               ^
/ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars/NameGenerator.java:92: error: not a statement
            j = p.getBirthCity().substring(j,j)) += returnedLastName; //caractère numéro j
                                                    ^
/ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars/NameGenerator.java:93: error: ';' expected
            k = p.getBirthCity().substring(k,k)) += returnedLastName; //caractère numéro k
                                               ^
/ubs/fukuisaurus/home.1/2/e1906182/Mes documents/Programmation objet/TP4/star-wars/NameGenerator.java:93: error: not a statement
            k = p.getBirthCity().substring(k,k)) += returnedLastName; //caractère numéro k
                                                    ^
8 errors
